feat: implement Todo API example, add Java foundations, and update documentation and CI/CD pipelines